--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,12 @@
 .eventBg {
     background-image: url("../../public/BG.png");
 }
+
+.shadow-chatbox {
+    box-shadow: 0px 5px 5px 4px rgb(200 213 235 / 50%);
+}
+
+.shadow-chatbox-before::before {
+    content: ''; /* Required for pseudo-elements */
+    box-shadow: 6px 6px 6px 0px rgba(200 213 235 / 50%);
+}
